--- a/.github/workflows/python_workflow.yml
+++ b/.github/workflows/python_workflow.yml
@@ -1,6 +1,26 @@
 name: Python package
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+      - staging
+      - prod
+    pull_request:
+      - branches:
+        - main
+        - staging
+        - prod
+
+services:
+  image: postgres
+  env:
+  - POSTGRES_USER: test_user
+  - POSTGRES_PASSWORD: test_pwd
+  - POSTGRES_BD: test_db
+  ports:
+  - 5432/tcp
+  options: --health-cmd pg_isready --health_interval 10s --health-timeout 5s --health-retries 5
 
 jobs:
   build:
@@ -19,14 +39,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
+    - name: Run migrations
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test
+        python manage.py migrate
+    - name: Run tests
       run: |
         python manage.py test
+      env:
+          SYSTEM_ENV: GITHUB_WORKFLOW
