#15 more indentation fixes unittest action

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -15,11 +15,11 @@ on:
 services:
   image: postgres
   env:
-  - POSTGRES_USER: test_user
-  - POSTGRES_PASSWORD: test_pwd
-  - POSTGRES_BD: test_db
+    POSTGRES_USER: test_user
+    POSTGRES_PASSWORD: test_pwd
+    POSTGRES_BD: test_db
   ports:
-  - 5432/tcp
+    - 5432/tcp
   options: --health-cmd pg_isready --health_interval 10s --health-timeout 5s --health-retries 5
 
 jobs:
