--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -23,8 +23,8 @@ services:
   options: --health-cmd pg_isready --health_interval 10s --health-timeout 5s --health-retries 5
 
 jobs:
-  build:
-
+  unit-tests:
+    name: Unit Tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
