--- a/.github/workflows/python_workflow.yml
+++ b/.github/workflows/python_workflow.yml
@@ -44,5 +44,4 @@ jobs:
     - name: Run tests
       run: |
         python manage.py test
-#      env: SYSTEM_ENV: GITHUB_WORKFLOW
-#
+      env: SYSTEM_ENV: GITHUB_WORKFLOW
