#15 python workflow env line jump

--- a/.github/workflows/python_workflow.yml
+++ b/.github/workflows/python_workflow.yml
@@ -44,4 +44,5 @@ jobs:
     - name: Run tests
       run: |
         python manage.py test
-      env: SYSTEM_ENV: GITHUB_WORKFLOW
+      env:
+        SYSTEM_ENV: GITHUB_WORKFLOW
