--- a/.github/workflows/python_workflow.yml
+++ b/.github/workflows/python_workflow.yml
@@ -3,15 +3,15 @@ name: Unit Tests
 # on: [push, pull_request]
 on: [push]
 
-services:
-  image: postgres
-  env:
-    POSTGRES_USER: test_user
-    POSTGRES_PASSWORD: test_pwd
-    POSTGRES_BD: test_db
-  ports:
-    - 5432/tcp
-  options: --health-cmd pg_isready --health_interval 10s --health-timeout 5s --health-retries 5
+# services:
+#   image: postgres
+#   env:
+#     POSTGRES_USER: test_user
+#     POSTGRES_PASSWORD: test_pwd
+#     POSTGRES_BD: test_db
+#   ports:
+#     - 5432/tcp
+#   options: --health-cmd pg_isready --health_interval 10s --health-timeout 5s --health-retries 5
 
 jobs:
   build:
