--- a/.github/workflows/python_workflow.yml
+++ b/.github/workflows/python_workflow.yml
@@ -8,14 +8,15 @@ jobs:
 #    name: Unit Tests
     runs-on: ubuntu-latest
     services:
-      image: postgres
-      env:
-        POSTGRES_USER: test_user
-        POSTGRES_PASSWORD: test_pwd
-        POSTGRES_BD: test_db
-      ports:
-        - 5432/tcp
-      options: --health-cmd pg_isready --health_interval 10s --health-timeout 5s --health-retries 5
+      db:
+        image: postgres
+        env:
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test_pwd
+          POSTGRES_BD: test_db
+        ports:
+          - 5432/tcp
+        options: --mount type=tmpfs,destination=/var/lib/postgresql/data --health-cmd pg_isready --health_interval 10s --health-timeout 5s --health-retries 5
     strategy:
       matrix:
         python-version: [3.9]
