--- a/.github/workflows/python_workflow.yml
+++ b/.github/workflows/python_workflow.yml
@@ -16,7 +16,8 @@ jobs:
           POSTGRES_BD: test_db
         ports:
           - 5432/tcp
-        options: --mount type=tmpfs,destination=/var/lib/postgresql/data --health-cmd pg_isready --health_interval 10s --health-timeout 5s --health-retries 5
+        options: --mount type=tmpfs,destination=/var/lib/postgresql/data --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    steps:
     strategy:
       matrix:
         python-version: [3.9]
