--- a/.github/workflows/python_workflow.yml
+++ b/.github/workflows/python_workflow.yml
@@ -41,7 +41,7 @@ jobs:
         touch ../logs/comands.log
     - name: Run tests
       run: |
-#        python manage.py test
+        coverage erase
         coverage run --source . manage.py test --settings=j8bet_backend.test_settings
         coverage report
       env:
