--- a/.github/workflows/python_workflow.yml
+++ b/.github/workflows/python_workflow.yml
@@ -12,8 +12,8 @@ jobs:
       db:
         image: postgres
         env:
-          POSTGRES_USER: test_user
-          POSTGRES_PASSWORD: test_pwd
+          POSTGRES_USER: postgres 
+          POSTGRES_PASSWORD: postgres
           POSTGRES_BD: test_db
         ports:
           - 5432/tcp
