--- a/.github/workflows/python_workflow.yml
+++ b/.github/workflows/python_workflow.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      db:
+      postgres:
         image: postgres
         env:
           POSTGRES_USER: postgres 
@@ -29,10 +29,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: psycopg2 prerequisites
+      run: sudo apt-get install python-dev libpq-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest flake8
+        pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #    - name: Run migrations
 #      run: |
