--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -11,9 +11,9 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_USER: postgres 
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_BD: test_db
+          POSTGRES_USER: j8bet 
+          POSTGRES_PASSWORD: j8bet
+          POSTGRES_BD: j8bet
         ports:
           - 5432:5432
         options: --mount type=tmpfs,destination=/var/lib/postgresql/data --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
