--- a/.coveragerc
+++ b/.coveragerc
@@ -2,6 +2,10 @@
 exclude_lines =
     def __str__
     pragma: no cover
+fail_under = 100
+show_missing = True
+skip_covered = True
+
 omit =
     */migrations/*
     fabfile.py
@@ -14,9 +18,7 @@ omit =
     */urls.py
     */factories.py
     */admin_utils.py
-fail_under = 100
-show_missing = True
-skip_covered = True
+    */settings.py
 
 [run]
 source = .
