--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -23,3 +23,6 @@ jobs:
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_JSCPD: false
+          VALIDATE_MARKDOWN: false
