--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,6 +16,9 @@ jobs:
       # Checks out a copy of your repository on the ubuntu-latest machine
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          # Full git history is needed to get a proper list of changed files within `super-linter`
+          fetch-depth: 0
 
       # Runs the Super-Linter action
       - name: Run Super-Linter
